tests/NormalTests/paczka1/small_fuzzy/44528614.err
Error in line 6: fPSjquxw A837 61,8
Error in line 10: fEDmQLNgc S2 73,6
